@@ -1,4 +1,4 @@
-/*	$NetBSD: umap_vfsops.c,v 1.25 2000/06/10 18:27:04 assar Exp $	*/
+/*	$NetBSD: umap_vfsops.c,v 1.25.2.1 2001/08/16 16:03:44 tv Exp $	*/
 
 /*
  * Copyright (c) 1992, 1993
@@ -146,6 +146,11 @@ umapfs_mount(mp, path, data, ndp, p)
 	/* 
 	 * Now copy in the number of entries and maps for umap mapping.
 	 */
+	if (args.nentries > MAPFILEENTRIES || args.gnentries > GMAPFILEENTRIES) {
+		vput(lowerrootvp);
+		return (error);
+	}
+
 	amp->info_nentries = args.nentries;
 	amp->info_gnentries = args.gnentries;
 	error = copyin(args.mapdata, (caddr_t)amp->info_mapdata, 
